--- a/LaRuche_2017/laruche/js_tools/quill/quill.snow-custom.css
+++ b/LaRuche_2017/laruche/js_tools/quill/quill.snow-custom.css
@@ -11,6 +11,7 @@
   height: 100%;
   margin: 0px;
   position: relative;
+  background-color: white;
 }
 .ql-container.ql-disabled .ql-tooltip {
   visibility: hidden;
