ajout de destruction deréponses et variable

--- a/LaRuche_2017/laruche/css/ruche.css
+++ b/LaRuche_2017/laruche/css/ruche.css
@@ -90,6 +90,13 @@
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
+.surligne_Answer{
+	background-color: rgb(240,83,83);
+	padding: 2px 5px 2px 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
 
 .surligne_Latex{
 	background-color: rgb(253,255,187);
