--- a/LaRuche_2017/laruche/js_tools/quill/quill.snow-custom.css
+++ b/LaRuche_2017/laruche/js_tools/quill/quill.snow-custom.css
@@ -37,7 +37,8 @@
   height: 100%;
   outline: none;
   overflow-y: auto;
-  padding: 12px 15px;
+/*  padding: 12px 15px; */
+  padding: 5px 6px;
   tab-size: 4;
   -moz-tab-size: 4;
   text-align: left;
