--- a/LaRuche_2017/laruche/wims_module/footer.phtml
+++ b/LaRuche_2017/laruche/wims_module/footer.phtml
@@ -1,33 +1,15 @@
 
-<script src="$dirjs/katex/katex.min.js"></script>
+<script src="$dirjs/js_tools/katex/katex.min.js"></script>
 
-<script src="$dirjs/quill/highlight.js-master/src/highlight.js"></script>
+<script src="$dirjs/js_tools/quill/highlight.js-master/src/highlight.js"></script>
+<script src="$dirjs/js_tools/quill/quill.min.js"></script>
+<script src="$dirjs/js_tools/html2canvas.js"></script>
 
-<script src="$dirjs/blockly/blockly_compressed.js"></script>
-<script src="$dirjs/html2canvas.js"></script>
-<script src="$dirjs/blockly/blocks_compressed.js"></script>
+<script src="$dirjs/js_tools/blockly/blockly_compressed.js"></script>
+<script src="$dirjs/js_tools/blockly/blocks_compressed.js"></script>
 
 !! Translation files :
-<script src="$dirjs/blockly/msg/js/$lang.js" charset="utf-8"></script>
+<script src="$dirjs/js_tools/blockly/msg/js/$lang.js" charset="utf-8"></script>
 <script src="$dirjs/src/BlocklyWIMS/msg/js/$lang.js" charset="utf-8"></script>
 
-<script src="$dirjs/quill/quill.min.js"></script>
-
-<script src="$dirjs/src/ImageVariable.js" charset="utf-8"></script>
-<script src="$dirjs/src/LatexImage.js" charset="utf-8"></script>
-<script src="$dirjs/src/AnswerImage.js" charset="utf-8"></script>
-<script src="$dirjs/src/Variable.js" charset="utf-8"></script>
-<script src="$dirjs/src/Answer.js" charset="utf-8"></script>
-<script src="$dirjs/src/AnswerBlock.js" charset="utf-8"></script>
-<script src="$dirjs/src/SEditor.js" charset="utf-8"></script>
-
-<script src="$dirjs/src/BlocklyWIMS/BlocklyFieldWIMSEditor.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/BlocklyOEFgenerator.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/OEF/variablesOEFGenerator.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/OEF/math.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/OEF/logic.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/OEF/analyse.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/OEF/BlocklyWIMSBlocks.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/BlocklyCustom.js" charset="utf-8"></script>
-<script src="$dirjs/src/BlocklyWIMS/SProgramEditor.js" charset="utf-8"></script>
-<script src="$dirjs/src/app.js" charset="utf-8"></script>
+<script src="$dirjs/laruche.min.js" charset="utf-8"></script>
