--- a/LaRuche_2017/laruche/wims_module/menu.phtml
+++ b/LaRuche_2017/laruche/wims_module/menu.phtml
@@ -1,5 +1,8 @@
 <div class="popup_hidden" id="popup"></div> <!-- va servir pour tous les popups -->
-
+<script type="text/javascript">
+ // Is the editor embedded inside the WIMS server ?
+ var isInWIMS = true;
+</script>
   <div class="row">
     <div class="large-12 columns RCl_Titre_Editeur">
       <img src="$dirjs/images/logo.png">
@@ -181,7 +184,7 @@
     </div>
   </div>
 
-  <!-- Div programme préparation Blockly -->
+  <!-- Div programme prï¿½paration Blockly -->
   <div id="RId_programPrep_blockly" style="position: absolute"></div>
   <xml id="RId_toolbox_programPrep" xmlns="http://www.w3.org/1999/xhtml" style="display: none;">
     <category name="Variables" colour="#0099ff" custom="VARIABLE" id="Rid_Prep_Blockly_Toolbar_Variables"></category>
