Correction de 2 bugs sur des fichiers introuvables ("Seditor", "laruche.min.js" et "quill.min.js.map") + remplace l'appel à Foundation.min.css par les différents plugins necessaire, pour éviter de faire redondance avec les éléments Foundation déja chargés. + Retire les icones Foundation : elle devront être celles choisies par le serveur WIMS.

--- a/LaRuche_2017/laruche/wims_module/footer.phtml
+++ b/LaRuche_2017/laruche/wims_module/footer.phtml
@@ -1,4 +1,6 @@
 
+<script src="$dirjs/src/SEditor.js" type="text/javascript" charset="utf-8"></script>
+
 <script src="$dirjs/js_tools/katex/katex.min.js"></script>
 
 <script src="$dirjs/js_tools/quill/highlight.js-master/src/highlight.js"></script>
@@ -12,4 +14,4 @@
 <script src="$dirjs/js_tools/blockly/msg/js/$lang.js" charset="utf-8"></script>
 <script src="$dirjs/src/BlocklyWIMS/msg/js/$lang.js" charset="utf-8"></script>
 
-<script src="$dirjs/laruche.min.js" charset="utf-8"></script>
+<script src="$dirjs/src/app.js" charset="utf-8"></script>
