--- a/LaRuche_2017/laruche/wims_module/main.phtml
+++ b/LaRuche_2017/laruche/wims_module/main.phtml
@@ -7,12 +7,12 @@
 
 !set wims_html_header=!append line \
   <!-- Foundation 6 styles -->\
-  <!-- <link rel="stylesheet" href="themes/_css/foundation_forms.css"/> -->\
-  <!-- <link rel="stylesheet" href="themes/_css/foundation_card.css"/> -->\
-  <!-- <link rel="stylesheet" href="themes/_css/foundation_callout.css"/> -->\
-  <!-- <link rel="stylesheet" href="themes/_css/foundation_grid_float.css"/> -->\
-  <link rel="stylesheet" href="themes/_css/foundation.min.css"/>\
-  <link rel="stylesheet" href="themes/_css/foundation-icons/foundation-icons.css"/>\
+  <link rel="stylesheet" href="themes/_css/foundation_forms.css"/>\
+  <link rel="stylesheet" href="themes/_css/foundation_card.css"/>\
+  <link rel="stylesheet" href="themes/_css/foundation_callout.css"/>\
+  <link rel="stylesheet" href="themes/_css/foundation_grid_float.css"/>\
+  <!--link rel="stylesheet" href="themes/_css/foundation.min.css"/-->\
+  <!--link rel="stylesheet" href="themes/_css/foundation-icons/foundation-icons.css"/-->\
   <link rel="stylesheet" href="$dirjs/css/ruche.css"/>\
   <!-- Style sheets of tools for the Quill editor -->\
   <link rel="stylesheet" href="$dirjs/js_tools/katex/katex.min.css" />\
