--- a/LaRuche_2017/laruche/wims_module/footer.phtml
+++ b/LaRuche_2017/laruche/wims_module/footer.phtml
@@ -1,10 +1,10 @@
 
-<script src="$dirjs/src/SEditor.js" type="text/javascript" charset="utf-8"></script>
-
+!! Third party JS :
 <script src="$dirjs/js_tools/katex/katex.min.js"></script>
 
 <script src="$dirjs/js_tools/quill/highlight.js-master/src/highlight.js"></script>
 <script src="$dirjs/js_tools/quill/quill.min.js"></script>
+
 <script src="$dirjs/js_tools/html2canvas.js"></script>
 
 <script src="$dirjs/js_tools/blockly/blockly_compressed.js"></script>
@@ -14,4 +14,5 @@
 <script src="$dirjs/js_tools/blockly/msg/js/$lang.js" charset="utf-8"></script>
 <script src="$dirjs/src/BlocklyWIMS/msg/js/$lang.js" charset="utf-8"></script>
 
-<script src="$dirjs/src/app.js" charset="utf-8"></script>
+!! Main JS :
+<script src="$dirjs/laruche.min.js" charset="utf-8"></script>
