utilise le script wims adm/language
Permet de prendre automatiquement en compte l'anglais si la langue
sélectionnée n'existe pas encore

--- a/LaRuche_2017/laruche/wims_module/main.phtml
+++ b/LaRuche_2017/laruche/wims_module/main.phtml
@@ -1,4 +1,4 @@
-!read names_$lang.phtml
+!read adm/language lang/names.phtml
 !set dirjs=scripts/js/laruche
 
 !if $httpd_HTTP_X_REQUESTED_WITH!=$empty
