Updated the README to include developer instructions

--- a/LaRuche_2017/laruche/wims_module/json.phtml
+++ b/LaRuche_2017/laruche/wims_module/json.phtml
@@ -8,7 +8,7 @@
     "error_code":$error"
   !else
     "status":"OK",
-    "message":"file has been sent to the user session",
+    "message":"file has been sent to the user session $wims_ref_name",
     "file_link":"$wims_ref_name/getfile/submit.oef?session=$wims_session"
   !endif
 }
