--- a/LaRuche_2017/laruche/wims_module/menu.phtml
+++ b/LaRuche_2017/laruche/wims_module/menu.phtml
@@ -221,8 +221,8 @@
         <field name="WIMS_EDITOR">true</field>
       </block>
     </category>
-    <sep></sep>
-    <category name="Essaims" id="Rid_Prep_Blockly_Toolbar_Swarms"></category>
+    <!-- <sep></sep>
+    <category name="Essaims" id="Rid_Prep_Blockly_Toolbar_Swarms"></category> -->
   </xml>
 
 
